--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npm index",
+    "start": "node index.js",
     "dev": "nodemon index"
   },
   "keywords": [],
